--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,20 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+.corPrimaria{background-color: #7368e6}
+.corPrimariaText{color: #7368e6}
+.corPrimariaTr{background-color: rgba(115, 104, 230, 0.36)}
+.corSecundaria{background-color: #665bd2}
+.corSecundariaText{color: #665bd2}
+
+
+.sombra{
+  box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-* {
-  box-sizing: border-box;
+input:focus, textarea:focus, select:focus{
+  outline: none;
 }
