--- a/styles/components/Avaliacao.module.css
+++ b/styles/components/Avaliacao.module.css
@@ -2,8 +2,9 @@
     user-select: none;
     display: flex;
     justify-content: space-between;
-    margin-top: 5%;
+    margin-top: 50px;
     width: 80%;
+    max-width: 1000px;
     border-radius: 10px;
     padding:10px;
 }
@@ -12,8 +13,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 5%;
+    margin-top: 50px;
     width: 80%;
+    max-width: 1000px;
     border-radius: 10px;
     padding:10px;
 }
@@ -28,11 +30,20 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 80%;
+    width: 85%;
+    padding:10px;
+    border-radius: 10px;
 }
 
 .Input{
     border: none;
+    opacity: 0.6;
+    border-radius: 10px;
+    font-size:20px;
+}
+
+.InputErro{
+    border: solid red;
     opacity: 0.6;
     border-radius: 10px;
     font-size:20px;
@@ -45,6 +56,13 @@
     align-items: center;
     width:48px;
 }
+.ImgLoad{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:100%;
+}
+
 
 .Painel{
     display: flex;
@@ -70,7 +88,7 @@
 
 .Botao{
     border: none;
-    width: 20%;
+    width: 100px;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
@@ -78,4 +96,13 @@
     padding: 10px;
     border-radius: 10px;
     font-weight: bold;
+}
+
+.Mensagem{
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 10px;
+    padding:10px;
+    font-weight: bold;
+    color: #fff;
 }
