--- a/styles/components/Modulo.module.css
+++ b/styles/components/Modulo.module.css
@@ -4,6 +4,7 @@
     align-content: center;
     margin-top: 5%;
     width: 80%;
+    max-width: 1000px;
     border-radius: 10px;
     padding:10px;
     text-align: center;
