--- a/styles/components/Painel.module.css
+++ b/styles/components/Painel.module.css
@@ -1,6 +1,7 @@
 .Painel{
-    margin-top: 10%;
+    margin-top: 100px;
     width: 80%;
+    max-width: 1000px;
     border-radius: 10px;
     padding:10px;
     text-align: center;
@@ -9,18 +10,18 @@
 
 .Painel2{
     border-radius: 10px;
+    margin-top: 30px;
     margin-left: auto;
     margin-right: auto;
     padding:10px;
     text-align: center;
-    box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
 }
 
 
 .Botao{
     border: none;
     color: #fff;
-    margin: 40px;
+    margin-top: 20px;
     padding: 10px;
     border-radius: 10px;
     font-weight: bold;
