--- a/styles/components/Avaliacao.module.css
+++ b/styles/components/Avaliacao.module.css
@@ -40,6 +40,7 @@
     opacity: 0.6;
     border-radius: 10px;
     font-size:20px;
+    padding:5px;
 }
 
 .InputErro{
@@ -47,6 +48,7 @@
     opacity: 0.6;
     border-radius: 10px;
     font-size:20px;
+    padding:5px;
 }
 
 
