--- a/styles/components/PainelCriadorModulo.module.css
+++ b/styles/components/PainelCriadorModulo.module.css
@@ -1,6 +1,7 @@
 .Painel{
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
     align-content: center;
     margin-top: 5%;
     width: 80%;
@@ -12,15 +13,24 @@
 
 .Painel2{
     border-radius: 10px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 10px;
     padding:10px;
     text-align: center;
+    width:100%;
+}
+
+.ListaDeModulos{
+    width:100%;
+    background-color:white;
+    padding:5px;
+    border-radius: 10px;
 }
 
 
 .Botao{
     border: none;
+    width: 65px;
+    height: 65px;
     color: #fff;
     padding: 10px;
     border-radius: 10px;
@@ -29,4 +39,9 @@
 
 .Tabela{
     width:80%;
+}
+
+.Nav{
+    display: flex;
+    justify-content: space-between;
 }
