--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 input:focus, textarea:focus, select:focus{
