--- a/styles/components/Pergunta.module.css
+++ b/styles/components/Pergunta.module.css
@@ -1,4 +1,4 @@
-.ModuloHide{
+.PerguntaHide{
     user-select: none;
     display: flex;
     justify-content: space-between;
@@ -8,7 +8,7 @@
     padding-right:10px;
 }
 
-.ModuloNaoHide{
+.PerguntaNaoHide{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -21,7 +21,7 @@
     text-align: center;
 }
 
-.ModuloNaoHideForm{
+.PerguntaNaoHideForm{
     text-align: left;
     display: flex;
     flex-direction: column;
@@ -36,15 +36,6 @@
     text-align: center;
     width:100%;
 }
-
-.ListaDePerguntas{
-    width:100%;
-    margin-top:10px;
-    background-color:white;
-    padding:10px;
-    border-radius: 10px;
-}
-
 
 .Img{
     display: flex;
@@ -76,7 +67,7 @@
 
 .Input{
     border: none;
-    width: 80%;
+    width: 100%;
     opacity: 0.6;
     border-radius: 10px;
     margin-top: auto;
@@ -87,7 +78,7 @@
 
 .InputErro{
     border: solid red;
-    width: 80%;
+    width: 100%;
     opacity: 0.6;
     border-radius: 10px;
     margin-top: auto;
@@ -99,7 +90,6 @@
 .Mensagem{
     width: 100%;
     margin-top: 20px;
-    margin-bottom: 20px;
     border-radius: 10px;
     padding:10px;
     font-weight: bold;
@@ -108,6 +98,7 @@
 
 .Linha{
     display: flex;
+    flex-direction: column;
     justify-content:space-around;
 }
 
