--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 .corPrimaria{background-color: #7368e6}
-.corPrimariaText{color: #7368e6!important;}
+.corPrimariaText{color: #5d53d5 !important;}
 .corPrimariaTr{background-color: rgba(115, 104, 230, 0.36)}
 .corPrimariaTrTr{background-color: rgba(115, 104, 230, 0.2)}
 .corSecundaria{background-color: #665bd2}
